--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-carousel": "^0.18.0",
     "vue-chartist": "^2.3.1",
     "vue-chartjs": "^3.5.1",
+    "vue-cookies": "^1.8.1",
     "vue-count-to": "^1.0.13",
     "vue-easy-lightbox": "^0.14.0",
     "vue-echarts": "^5.0.0-beta.0",
