--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^8.2.4",
     "leaflet": "^1.7.1",
     "metismenujs": "^1.2.1",
+    "moment": "^2.29.4",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "simplebar-vue": "^1.6.0",
