--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "vue-star-rating": "^1.7.0",
     "vue-sweetalert2": "^4.1.1",
     "vue-switches": "^2.0.1",
+    "vue-toastr": "^2.1.2",
     "vue2-datepicker": "^3.8.2",
     "vue2-dropzone": "^3.6.0",
     "vue2-google-maps": "^0.10.7",
