--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vue-flatpickr-component": "^8.1.7",
     "vue-form-wizard": "^0.8.4",
     "vue-i18n": "^8.22.4",
+    "vue-js-toggle-button": "^1.3.3",
     "vue-meta": "^2.4.0",
     "vue-multiselect": "^2.1.6",
     "vue-number-input-spinner": "^2.2.0",
