--- a/src/app.config.json
+++ b/src/app.config.json
@@ -1,4 +1,4 @@
 {
-  "title": "Coded Events Admin",
-  "description": "Coded Events is a fully featured premium Vuejs admin dashboard template built on top of awesome Bootstrap 5.0.0"
+  "title": "Ecstasy Admin",
+  "description": "Ecstasy is a fully featured premium Vuejs admin dashboard template built on top of awesome Bootstrap 5.0.0"
 }
